fix spacing

--- a/src/components/FoodSensitivities/FoodSensitivities.scss
+++ b/src/components/FoodSensitivities/FoodSensitivities.scss
@@ -10,6 +10,7 @@
   font-size: 1.15rem;
   font-weight: $space-semi-bold;
   font-family: $space;
+  margin-left: .625rem;
 }
 
 .food-sensitivities h4 {
